--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,28 +1,41 @@
-.App {
-  text-align: center;
+/* Sign Up Page CSS */
+body{
+  margin:0; 
+  padding: 0; 
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.sign-up-page{
+  width: 100%;
+  height: 87vh; 
+  margin: 0; 
+  padding: 0; 
+  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP2G0l0QmCUxryp67I19vz_Bf_hpogejNLbi3DAEtGAlFHFZhi");
+  background-size: cover; 
+  display:flex; 
+  justify-content: center; 
+  align-items: center; 
+  
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.sign-up-form {
+  background-color: #F9F9F9;
+  height: 85vh; 
+  width: 50%; 
+  margin: 0 auto; 
+  border-radius: 10px; 
+  padding: 20px; 
 }
 
-.App-title {
-  font-size: 1.5em;
+.form {
+  text-align: center; 
+  width: 50%; 
+  margin: 0 auto; 
 }
 
-.App-intro {
-  font-size: large;
+.form h1 {
+  font-size: 20px; 
 }
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.form h2 {
+  font-size: 30px; 
 }
