--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,7 +1,13 @@
 /* Sign Up Page CSS */
+html {
+  margin: 0; 
+  padding: 0; 
+}
+
 body{
   margin:0; 
   padding: 0; 
+  background-color: #3D4849; 
 }
 
 .sign-up-page{
@@ -9,33 +15,88 @@ body{
   height: 87vh; 
   margin: 0; 
   padding: 0; 
-  background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQP2G0l0QmCUxryp67I19vz_Bf_hpogejNLbi3DAEtGAlFHFZhi");
+  background-image: url("https://c1.staticflickr.com/4/3252/2877304479_7078df5f31_b.jpg");
   background-size: cover; 
   display:flex; 
   justify-content: center; 
   align-items: center; 
-  
 }
 
-.sign-up-form {
+.sign-up-form, .sign-in-form {
   background-color: #F9F9F9;
-  height: 85vh; 
-  width: 50%; 
+  height: 80vh; 
+  width: 42%; 
   margin: 0 auto; 
   border-radius: 10px; 
   padding: 20px; 
+  border: 5px solid #3D4849; 
 }
 
 .form {
   text-align: center; 
-  width: 50%; 
+  width: 75%; 
   margin: 0 auto; 
 }
 
 .form h1 {
-  font-size: 20px; 
+  font-size: 18px; 
 }
 
 .form h2 {
-  font-size: 30px; 
+  font-size: 25px; 
+  font-weight: bold; 
+}
+
+input::placeholder {
+  color: grey; 
+}
+
+.form p {
+  text-align: center; 
+  color: firebrick;
+  width: 100%; 
+  margin: 20px auto; 
+}
+
+/* Nav CSS Styling  */
+
+.nav ul{
+  margin-right: 3%; 
+  display: flex; 
+  flex-direction: row-reverse; 
+}
+
+.nav ul li a {
+  text-decoration: none; 
+  color: white; 
+}
+
+.nav ul li a:hover{
+  color: lightgrey; 
+}
+
+/* Sign In Page CSS */
+
+.sign-in-page {
+  width:100%; 
+  height: 87vh; 
+  margin: 0;
+  padding: 0; 
+  background-image: url('https://bestwallpapers.co/wp-content/uploads/2018/05/lotus-flower-wallpaper-hd-desktop-background.jpg'); 
+  background-size: cover; 
+  display:flex; 
+  justify-content: center; 
+  align-items: center; 
+  flex-direction: column; 
+}
+
+.sign-in-form {
+  margin-top: 30px; 
+  width: 38%;
+  height: 75vh; 
+  text-align: center; 
+}
+
+.button-sign-in {
+  margin-bottom: 20px; 
 }
