--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -12,7 +12,7 @@ body{
 
 .sign-up-page{
   width: 100%;
-  height: 87vh; 
+  height: 95vh; 
   margin: 0; 
   padding: 0; 
   background-image: url("https://c1.staticflickr.com/4/3252/2877304479_7078df5f31_b.jpg");
@@ -24,11 +24,12 @@ body{
 
 .sign-up-form, .sign-in-form {
   background-color: #F9F9F9;
-  height: 80vh; 
+  height: 99vh; 
   width: 42%; 
   margin: 0 auto; 
+  margin-top: 70px;
   border-radius: 10px; 
-  padding: 20px; 
+  padding: 0px; 
   border: 5px solid #3D4849; 
 }
 
