Fixed the react-select with bootstrap styling only

--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -183,7 +183,7 @@
   width: 100%; 
 }
 
-.book-input{
+/* .book-input{
   margin-top: 20px; 
   margin-bottom: 10px; 
   width: 100%; 
@@ -195,4 +195,4 @@
 
 .book-label{
   margin-bottom: 15px; 
-}
+} */
