--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -1,51 +1,18 @@
-/* Sign Up Page CSS */
-
-.logo{
-  width: 150px; 
-  height: 50px; 
+.margin-header {
+  margin-top: 25px;
 }
 
-
-.bookform {
-  margin: 40px auto; 
-  width: 60%;  
+.logo{
+  width: 115px; 
+  height: 50px; 
 }
 
 .book-fields{
   width: 100%; 
-  border: 1px solid #ccc;
+  border: 1px solid #16594a;
   padding: 9px;
-
-}
-
-.book-form-title{
-  text-align: center; 
-}
-
-.book-form-title h2{
-  font-size: 20px; 
-  margin-bottom: 50px; 
-  margin-top: 20px; 
-}
-
-.submit-book-form{
-  margin-top: 30px; 
-}
-
-.book-fields{
+  border-radius: 4px;
   margin-bottom: 30px; 
-}
-
-.book-headline{
-  margin-top: 20px; 
-}
-
-.statcard{
-  margin: 4%; 
-}
-
-.map{
-  margin-left: 7%; 
 }
 
 .sign-up-form form{
@@ -57,13 +24,9 @@
   flex-direction: column;
 }
 
-/* .sign-up-form form .row{
-  background-color: lightgrey; 
-  padding: 10%; 
-  margin: 20px; 
-  margin-bottom: 50px; 
-  border-radius: 20px; 
-} */
+.remove-book-btn {
+  margin-left: 9px;
+}
 
 .sign-up-form form .row input::placeholder{
   color: white; 
@@ -112,31 +75,7 @@
   margin-right: 10px; 
 }
 
-/* .giver-form{
-  display: flex; 
-  flex-direction: column; 
-  align-items: center; 
-  justify-content: center; 
-}
-
-.giver-form h3{
-  text-align: center; 
-} */
-
 .giver-logo {
   width: 100%; 
 }
 
-/* .book-input{
-  margin-top: 20px; 
-  margin-bottom: 10px; 
-  width: 100%; 
-}
-
-.book-language-label{
-  margin-left: 10px;  
-}
-
-.book-label{
-  margin-bottom: 15px; 
-} */
