--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -78,4 +78,9 @@
 .giver-logo {
   width: 100%; 
 }
-
+.youtube-wrapper{
+  position: relative; padding-bottom: 56.25%; /* 16:9 */  padding-top: 25px;
+}
+.youtube-video iframe{
+  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+}
