--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -7,6 +7,12 @@
   height: 50px; 
 }
 
+.bbtlogo{
+  width: 38px;
+  height: 50px;
+  padding-left: 10px;
+}
+
 .book-fields{
   width: 100%; 
   border: 1px solid #16594a;
@@ -83,4 +89,13 @@
 }
 .youtube-video iframe{
   position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+}
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
+  /* background-color: #f5f5f5; */
 }
