--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -2,31 +2,31 @@
   margin-top: 25px;
 }
 
-.logo{
-  width: 115px; 
-  height: 50px; 
+.logo {
+  width: 115px;
+  height: 50px;
 }
 
-.bbtlogo{
+.bbtlogo {
   width: 38px;
   height: 50px;
   padding-left: 10px;
 }
 
-.book-fields{
-  width: 100%; 
+.book-fields {
+  width: 100%;
   border: 1px solid #16594a;
   padding: 9px;
   border-radius: 4px;
-  margin-bottom: 30px; 
+  margin-bottom: 30px;
 }
 
-.sign-up-form form{
-  width: 40%; 
-  margin: 0 auto; 
-  display: flex; 
-  justify-content: center; 
-  align-items: center; 
+.sign-up-form form {
+  width: 40%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex-direction: column;
 }
 
@@ -34,65 +34,80 @@
   margin-left: 9px;
 }
 
-.sign-up-form form .row input::placeholder{
-  color: white; 
+.sign-up-form form .row input::placeholder {
+  color: white;
 }
 
-.sign-up-form h2{
-  text-align: center; 
-  margin: 20px 0 40px 0; 
+.sign-up-form h2 {
+  text-align: center;
+  margin: 20px 0 40px 0;
 }
 
 .sign-up-button {
-  margin-top: 40px; 
+  margin-top: 40px;
 }
 
-.sign-in-form form{
-  width: 100%; 
-  display: flex;  
-  justify-content: center; 
-  align-items: center; 
-  flex-direction: column; 
+.sign-in-form form {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.sign-in-form h2{
-  margin-bottom: 30px; 
-  margin-top: 60px; 
+.sign-in-form h2 {
+  margin-bottom: 30px;
+  margin-top: 60px;
 }
 
 .sign-in-form button {
-  margin-top: 20px; 
-  margin-bottom: 20px; 
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
-.sign-in-form .row input::placeholder{
-  color: white; 
+.sign-in-form .row input::placeholder {
+  color: white;
 }
 
-
-.buttons-submit-clear{
-  display: flex; 
-  align-items: center; 
-  justify-content: center; 
+.buttons-submit-clear {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-.buttons-submit-clear button{
-  margin-top: 20px; 
-  margin-right: 10px; 
+.buttons-submit-clear button {
+  margin-top: 20px;
+  margin-right: 10px;
 }
 
 .giver-logo {
-  width: 100%; 
-}
-.youtube-wrapper{
-  position: relative; padding-bottom: 56.25%; /* 16:9 */  padding-top: 25px;
-}
-.youtube-video iframe{
-  position: absolute; top: 0; left: 0; width: 100%; height: 100%;
+  width: 100%;
 }
 
-.footer {
+.giver {
+  margin-bottom: 90px;
+}
+
+.youtube-video {
+  margin-bottom: 90px; 
+}
+
+
+.youtube-wrapper {
+  position: relative;
+  padding-bottom: 56.25%; /* 16:9 */
+  padding-top: 25px;
+}
+.youtube-video iframe {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+.footer {
+  position: fixed;
+  text-align: center;
   bottom: 0;
   width: 100%;
   height: 60px;
