--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -13,6 +13,10 @@
   padding-left: 10px;
 }
 
+.nav-item Link a {
+  text-decoration: none; 
+}
+
 .book-fields {
   width: 100%;
   border: 1px solid #16594a;
