--- a/client/src/components/App.css
+++ b/client/src/components/App.css
@@ -109,12 +109,7 @@
   width: 100%;
   height: 100%;
 }
-.footer {
-  position: fixed;
-  text-align: center;
-  bottom: 0;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  /* background-color: #f5f5f5; */
+.footer-text {
+  font-size: .2rem;
+  margin: auto;
 }
